css/styles.css
/* ... */
#workday-waiver-window .waive-button:disabled {
  opacity: 0.5;
  color: var(--punch-disable-bground);
}

#workday-waiver-window #waiver-list-table,
#workday-waiver-window #holiday-list-table {
  width: 100%;
}

#workday-waiver-window a.nav-link:not(.active) {
  color: var(--page-color);
}

/** Day view related styles **/

html[data-view='day'] .container {
  margin-bottom: 0px;
}

html[data-view='day'] .title-header {
  width: 100%;
  margin-bottom: 80px;
}

html[data-view='day'] .title-header-text {
  font-size: 300%;
}

html[data-view='day'] .table-header {
  width: 100%;
}

html[data-view='day'] #calendar input[type="date" i]::-webkit-calendar-picker-indicator {
  background-image: var(--day-calendar-select-icon);
  height: 10px;
  margin-left: 4px;
  width: 10px;
}

html[data-view='day'] #calendar-table-body {
  width: 100%;
  display: flex;
  flex-direction: column;
  margin-top: 10px;
}

html[data-view='day'] #calendar-table-body > div {
  width: 100%;
  display: flex;
  flex: auto;
  flex-direction: row;
}

html[data-view='day'] .table-header tr {
  border-bottom: 2px solid var(--punch-bground);
}

html[data-view='day'] .th-label {
  text-align: right;
  padding-right: 20px;
  width: 50%;
}

html[data-view='day'] .th-label.th-label-total {
  width: 33%;
}

html[data-view='day'] .but-switch-view {
  width: 6.5%;
}

html[data-view='day'] .ti {
  text-align: left;
  padding-left: 20px;
  width: 50%;
}

html[data-view='day'] .ti-total {
  width: 13%;
  overflow: hidden;
}

html[data-view='day'] .ti-total input {
  margin-left: -14px;
}

html[data-view='day'] .table-body {
  margin-top: 10px;
}

html[data-view='day'] .row-time {
  border-bottom: 1px solid var(--table-border);
  width: 90% !important;
  margin: auto;
  padding: 2px 0 2px 0;
}

html[data-view='day'] .row-total {
  border-bottom: 4px solid var(--table-total-border);
  padding: 10px 0 10px 0;
}

html[data-view='day'] .row-waiver {
  margin: auto;
  padding: 2px 0 12px 0;
  border-bottom: 4px solid var(--table-total-border);
}

html[data-view='day'] .row-waiver .waived-day-text {
  margin: auto 20px auto auto;
}

html[data-view='day'] .row-waiver .ti-total {
  margin-right: auto;
}

html[data-view='day'] .non-working-day {
  background: none;
  margin: auto auto 10px auto;
}

html[data-view='day'] .summary {
  padding: 5px 0 5px 0;
}

html[data-view='day'] .summary .leave-by-text {
  margin: 0 20px auto auto;
}

html[data-view='day'] .summary .leave-by-time {
  margin-right: auto;
}

html[data-view='day'] .month-total-row {
  border-top: none;
  border-bottom: none;
  padding-top: 5px;
}

html[data-view='day'] .month-total-row .month-total-text {
  padding-right: 10px;
  text-align: right;
}

html[data-view='day'] .month-total-row .month-total-element {
  margin-left: auto;
  margin-right: auto;
  display: flex;
  width: fit-content;
}

html[data-view='day'] .month-total-row .month-total-time {
  text-align: left;
}

html[data-view='day'] .footer {
  height: 32px;
  font-size: 100%;
}

html[data-view='day'] .footer .punch-button {
  font-weight: 700;
  font-family: 'Montserrat', sans-serif;
}

html[data-view='day'] .punch-button img {
  display: none;
}

/** Extended view related styles **/

html[data-view='flexible'] .calendar-table-header {
  display: flow-root;
  border-bottom: 2px solid var(--table-border);
  width: 90%;
  margin: 5px auto 0 auto;
}

html[data-view='flexible'] .calendar-table-header .header-day,
html[data-view='flexible'] .calendar-table-header .header-empty,
html[data-view='flexible'] .calendar-table-header .header-day-total {
  font-size: 16px;
  font-weight: bold;
}

html[data-view='flexible'] .calendar-table-header .header-day {
  float: left;
  margin-left: 25px;
}

html[data-view='flexible'] .calendar-table-header .header-day-total {
  float: right;
  margin-right: 22px;
}

html[data-view='flexible'] .row-time {
  display: table-cell;
  width: 50px;
  margin: auto;
}

html[data-view='flexible'] .row-waiver .waived-day-text {
  width: 75%;
  margin: auto 10px auto;
}

@media (min-width: 1200px) {
  html[data-view='flexible'] .row-waiver .waived-day-text {
    width: 80%;
  }
}

html[data-view='flexible'] .arrow {
  margin-top: 9px;
  height: 5px;
  cursor: pointer;
}

html[data-view='flexible'] .arrow.left {
  margin-right: 3px;
}

html[data-view='flexible'] .arrow.right {
  margin-right: 5px;
}

html[data-view='flexible'] #calendar-table-body {
  width: 90%;
  margin: 0 auto 0 auto;
}

html[data-view='flexible'] #calendar-table-body > div {
  display: flex;
  border-bottom: 2px solid var(--table-border);
  height: 30px;
}

html[data-view='flexible'] .ti {
  text-align: left;
  padding-left: 20px;
}

html[data-view='flexible'] .weekday {
  width: 60px;
  margin: auto 0 auto 0;
}

html[data-view='flexible'] .time-cells {
  width: 69%;
  overflow-x: scroll;
  height: 30px;
}

@media (min-width: 1200px) {
  html[data-view='flexible'] .time-cells {
    width: 74%;
  }
}

html[data-view='flexible'] .time-cells.error-tr {
  border-bottom: 2px solid var(--error);
  margin-bottom: -2px;
}

html[data-view='flexible'] .row-day-cell {
  width: 13%;
}

html[data-view='flexible'] .time-cells::-webkit-scrollbar {
  display: none;
}

html[data-view='flexible'] .plus-sign,
html[data-view='flexible'] .minus-sign {
  border-color: var(--page-color);
  font-weight: bold;
  height: 20px;
  user-select: none;
}

html[data-view='flexible'] .plus-sign span,
html[data-view='flexible'] .minus-sign span {
  cursor: pointer;
}

html[data-view='flexible'] .sign-cell {
  height: 25px;
  padding: 0 2px 0 2px;
}

html[data-view='flexible'] .sign-cell.plus-sign {
  width: 30px;
  margin-top: -4px;
}

html[data-view='flexible'] .sign-cell.plus-sign span {
  font-size: 24px;
}

html[data-view='flexible'] .sign-cell.minus-sign {
  width: 22px;
  margin-top: -8px;
}

html[data-view='flexible'] .sign-cell.minus-sign span {
  font-size: 28px;
}
/* ... */

